k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pcs-tracker
  labels:
    app: pcs-tracker
